k8s/influxdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: influxdb
  name: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: influxdb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/management-network: "true"
        io.kompose.service: influxdb
    spec:
      containers:
        - image: docker.io/influxdb
          name: influxdb
          ports:
            - containerPort: 8086
            - containerPort: 8089
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/influxdb
              name: influxdb-data
      restartPolicy: Always
      volumes:
        - name: influxdb-data
          persistentVolumeClaim:
            claimName: influxdb-data
status: {}
