k8s/influxdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: influxdb
  name: influxdb
spec:
  ports:
    - name: "8086"
      port: 8086
      targetPort: 8086
    - name: "8089"
      port: 8089
      protocol: UDP
      targetPort: 8089
  selector:
    io.kompose.service: influxdb
status:
  loadBalancer: {}
