k8s/management-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: management-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/management-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/management-network: "true"
